--- a/04-HTML-CSS/index.html
+++ b/04-HTML-CSS/index.html
@@ -22,7 +22,7 @@
 
     <img
       id="course-image"
-      src="https://img-a.udemycdn.com/course/480x270/437398_46c3_9.jpg"
+      src="https://www.bing.com/th?id=ODL.bca71c57bf79e9b05fbb09547cee98df&w=197&h=102&c=7&rs=1&qlt=80&dpr=1.25&pid=RichNav"
     />
 
     <form id="your-name">
